@@ -1,7 +1,9 @@
 INCLUDES = $(all_includes)
 METASOURCES = AUTO
 noinst_LIBRARIES =  libwindows.a
-noinst_HEADERS = rkcommandeditorwindow.h rkhelpwindow.h
-libwindows_a_SOURCES = rkcommandeditorwindow.cpp rkhelpwindow.cpp
+noinst_HEADERS = rkcommandeditorwindow.h rkhelpwindow.h \
+	rkcommandeditorwindowpart.h
+libwindows_a_SOURCES = rkcommandeditorwindow.cpp rkhelpwindow.cpp \
+	rkcommandeditorwindowpart.cpp
 rcdir = $(kde_datadir)/rkward
-rc_DATA = rkcommandeditorwindowui.rc
+rc_DATA = rkcommandeditorwindowpart.rc
