@@ -1,3 +1,4 @@
+- command-editor has been switched to KPart-infrastructure completely
 - data-editor uses KPart-infrastructure (better integration)
 - override standard callbacks used by R for ReadConsole, ShowFiles, EditFile(s), ChooseFile, Suicide, CleanUp. No more reliance on stdin
 - some cleanups of dead code
